lang/tests/derive/ui/fail/01-union.stderr
error: unions are not supported
 --> $DIR/01-union.rs:6:5
  |
6 | pub union MyUnion {
  |     ^^^^^
